package org.jboss.pnc.scheduler.core.model;

message ServiceName {
     required string serviceName = 1;
}